# itead

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: RUST_STUDY_GUIDE.md
src/: app.d.ts  app.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs
src-tauri/src/engine/: devices.rs  dsp.rs  mod.rs  params.rs  playback.rs  recording.rs
src-tauri/src/project/: mod.rs  persistence.rs
src/lib/: api.ts  state.svelte.ts  types.ts
src/lib/components/: ChannelStrip.svelte  ProjectBar.svelte  TrackList.svelte
src/routes/: +page.svelte
