[package]
name = "itead"
version = "0.1.0"
edition = "2021"

[lib]
name = "itead_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rtrb = "0.3"
hound = "3.5"
anyhow = "1"
raw-window-handle = "0.6"
